Fixed issues with overlapping sections.

--- a/style.css
+++ b/style.css
@@ -178,14 +178,6 @@ box-shadow:         0px 0px 6px 5px rgba(50, 50, 50, 0.18);
         }
 
 
-.column-section :nth-child(0) {
-    display:block;
-    margin:0 auto;
-    min-width:150px;
-    height:200px;
-    z-index:1;
-    
-}
 
 #intro {
     background-color:black;
@@ -209,16 +201,6 @@ box-shadow:         0px 0px 6px 5px rgba(50, 50, 50, 0.18);
 }
 
 
-.slantedOnTopAbout {
-    margin-top:-400px;
-    background-color:black;
-    height:20px;
-    padding-top: 100px;
-    padding-bottom: 100px;
-/* -webkit-clip-path: polygon(0 0, 100% 100px, 100% 100%, 0 calc(100% - 100px)); */
-    clip-path: polygon(0 0, 100% 100px, 100% 100%, 0 calc(100% - 100px));
-}
-
 .fullWidthContainer {
     position:relative;
     z-index:2;
@@ -230,13 +212,44 @@ box-shadow:         0px 0px 6px 5px rgba(50, 50, 50, 0.18);
     max-width:100%;
 }
 
-#about {
+.slantTopWrap {
+    filter: drop-shadow(3px 6px 3px rgba(50, 50, 0, 1));
+}
+
+.slantedOnTopAbout {
+    margin-top:-400px;
+    background-color:lightgrey;
+    height:20px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+/* -webkit-clip-path: polygon(0 0, 100% 100px, 100% 100%, 0 calc(100% - 100px)); */
+    clip-path: polygon(0 0, 100% 100px, 100% 100%, 0 calc(100% - 100px));
+
+
 }
 
 
+
+
+#about {
+    background-color:lightgrey;
+
+}
+
+#aboutTitle {
+    color:black;
+}
+
+#aboutText {
+    color:black;
+    text-align:center;
+    font-size:20px;
+    padding:5px 30px 25px 30px;
+    line-height:1.2em;
+}
 .slantedOnBottomAbout {
     
-    background-color:black;
+    background-color:lightgrey;
     margin-top:30px;
     height:20px;
     padding-top: 100px;
@@ -286,7 +299,9 @@ clip-path:  polygon(
         flex-wrap:wrap;
         width:600px;
         height:600px;
-        padding-top:140px;
+        padding-top:240px;
+        margin-top:-250px;
+        margin-bottom:800px;
 
     }
     .fullWidthContainer {
@@ -299,6 +314,7 @@ clip-path:  polygon(
         height:600px;
         max-width:100%;
     }
+    
 
     #footer {
         z-index:0;
@@ -375,16 +391,25 @@ margin-left:5px;
 .slantedOnBottomProjects {
     
     background-color:pink;
-    margin-top:0px;
+    margin-top:1000px;
+    margin-bottom:430px;
     height:10px;
     padding-top: 100px;
     padding-bottom: 100px;
 /* -webkit-clip-path: polygon(0 0, 100% 100px, 100% 100%, 0 calc(100% - 100px)); */
-clip-path:  polygon(
+/* clip-path:  polygon(
     0 0,
     100% 0,
     100% 50%,
-    0 calc(0% - 0px));
+    0 calc(0% - 0px)); */
+
+
+    clip-path:  polygon(
+    0 0,
+    100% 0,
+    100% 100%,
+    0 calc(100% - 100px)
+  );
 }
 
 
